@@ -1,5 +1,11 @@
 2009-01-17  Michal Ludvig  <michal@logix.cz>
 
+	* S3/CloudFront.py: Initial support for creating new Distros,
+	  implemented parser for ListAllDists response.
+	* s3cmd: enabled 'cfcreate' command.
+
+2009-01-17  Michal Ludvig  <michal@logix.cz>
+
 	* S3/Utils.py: Added getDictFromTree() and appendXmlTextNode()
 	* S3/S3Uri.py: Added some convenience methods to S3UriS3() 
 
